deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: authentication
  name: authentication-deployment
  labels:
    app: virtuatable-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: virtuatable-auth
  template:
    metadata:
      labels:
        app: virtuatable-auth
    spec:
      dnsPolicy: Default
      containers:
        - name: virtuatable-api
          image: virtuatable/auth-api:<VERSION>
          args:
            - web
          ports:
            - containerPort: 9292
