deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: authentication
  name: authentication-service
spec:
  selector:
    app: virtuatable-auth
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9292
