deployment/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: authentication
  name: authentication-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  labels:
    app: virtuatable-auth
spec:
  rules:
    - http:
        paths:
          - path: "/auth(/|$)(.*)"
            backend:
              serviceName: authentication-service
              servicePort: 80
